--- a/hugo.toml
+++ b/hugo.toml
@@ -17,3 +17,7 @@ theme = "tale"
     title = "Posts"
     url = "/posts/"
     weight = 0
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
